parameterise the gradle cache
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -6,8 +6,8 @@ boolean isCiServer = System.getenv().containsKey("JENKINS_HOME")
 
 buildCache {
     remote(HttpBuildCache) {
-        url = 'http://nexus.cics-ts.hur.hdclab.intranet.ibm.com:5071/cache/'
-        push = true
+        url = System.getenv('GRADLE_CACHE')
+        push = isCiServer
         credentials {
             username = cacheUsername
             password = cachePassword
