try it this way
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -3,10 +3,11 @@ rootProject.name = "galasa-parent"
 include 'dev.galasa'
 
 boolean isCiServer = System.getenv().containsKey("JENKINS_HOME")
+string cache = GRADLE_CACHE
 
 buildCache {
     remote(HttpBuildCache) {
-        url = System.getenv('GRADLE_CACHE')
+        url = cache
         push = isCiServer
         credentials {
             username = cacheUsername
