--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -3,7 +3,7 @@ rootProject.name = "galasa-parent"
 include 'dev.galasa'
 
 boolean isCiServer = System.getenv().containsKey("JENKINS_HOME")
-string cache = GRADLE_CACHE
+string cache = System.getenv("GRADLE_CACHE")
 
 buildCache {
     remote(HttpBuildCache) {
