move the caching to config file
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/Jenkinsfile.gradle
+++ b/Jenkinsfile.gradle
@@ -11,6 +11,13 @@ pipeline {
       def workspace = pwd()
    }
    stages {
+      stage('prep-workspace') { 
+         steps {
+            configFileProvider([configFile(fileId: 'galasa-init-gradle', targetLocation: '${workspace}/.gradle/init.gradle')]) {
+            }
+         }
+      }
+   
       stage('gradle') {
          steps {
             withCredentials([string(credentialsId: 'galasa-gpg', variable: 'GPG'),
