getting fed up now
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -98,8 +98,8 @@ subprojects {
          repositories {
              maven {
                  credentials {
-                     username System.getenv('MAVEN_USERNAME')
-                     password System.getenv('MAVEN_PASSWORD')
+                     username System.getenv('MAVENUSERNAME')
+                     password System.getenv('MAVENPASSWORD')
                  }
                  url = mavenrepo
              }
