got conditional maven publishing to work
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -12,6 +12,10 @@ subprojects {
  	   onlyIf { isReleaseVersion }
 	}
     
+	tasks.withType(PublishToMavenRepository) {
+        onlyIf { jar.didWork }
+    }
+
     java {
         withJavadocJar()
         withSourcesJar()
