Add more projects
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -20,6 +20,10 @@ subprojects {
         withJavadocJar()
         withSourcesJar()
     }
+    
+    tasks.withType(Javadoc) {
+        failOnError = false
+    }
 
     repositories {
         maven {
