--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = "galasa-parent"
 
 include 'dev.galasa'
+include 'dev.galasa.framework.maven.repository.spi'
+include 'dev.galasa.framework'
