--- a/galasa-parent/dev.galasa.framework.api.testcatalog/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api.testcatalog/pom.xml
@@ -28,7 +28,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
+			<groupId>dev.galasa</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
 		</dependency>
