--- a/galasa-parent/dev.galasa.framework.obr/pom.xml
+++ b/galasa-parent/dev.galasa.framework.obr/pom.xml
@@ -197,7 +197,7 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
+			<groupId>dev.galasa</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
 			<scope>compile</scope>
