--- a/galasa-parent/dev.galasa.framework/pom.xml
+++ b/galasa-parent/dev.galasa.framework/pom.xml
@@ -72,7 +72,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
+			<groupId>dev.galasa</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.7</version> <!-- force for eclipse -->
 			<scope>provided</scope>
