--- a/galasa-parent/galasastaging-maven-plugin/pom.xml
+++ b/galasa-parent/galasastaging-maven-plugin/pom.xml
@@ -60,7 +60,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
+			<groupId>dev.galasa</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
 		</dependency>
