--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = "galasa-parent"
 
 include 'dev.galasa'
 include 'dev.galasa.framework.maven.repository.spi'
+include 'dev.galasa.framework.maven.repository'
 include 'dev.galasa.framework'
