More projects added
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -4,3 +4,14 @@ include 'dev.galasa'
 include 'dev.galasa.framework.maven.repository.spi'
 include 'dev.galasa.framework.maven.repository'
 include 'dev.galasa.framework'
+include 'dev.galasa.framework.resource.management'
+include 'dev.galasa.framework.metrics'
+include 'dev.galasa.framework.api'
+include 'dev.galasa.framework.api.authentication'
+include 'dev.galasa.framework.api.bootstrap'
+include 'dev.galasa.framework.api.cps'
+include 'dev.galasa.framework.api.health'
+include 'dev.galasa.framework.api.launcher'
+include 'dev.galasa.framework.api.ras'
+include 'dev.galasa.framework.api.runs'
+include 'dev.galasa.framework.api.testcatalog'
