--- a/galasa-parent/dev.galasa.framework/build.gradle
+++ b/galasa-parent/dev.galasa.framework/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = "dev.galasa"
-version = "0.12.0-SNAPSHOT"
+version = "0.12.0"
 
 dependencies {
 	implementation project(':dev.galasa')	
