--- a/galasa-parent/dev.galasa.framework/pom.xml
+++ b/galasa-parent/dev.galasa.framework/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.12.0-SNAPSHOT</version>
+		<version>0.12.0</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework</artifactId>
-	<version>0.12.0-SNAPSHOT</version>
+	<version>0.12.0</version>
 	<!-- If you change this version, you must update the pom.xml in the following projects:- 
 	dev.galasa.framework.obr
 	galasa-bom
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa</artifactId>
-			<version>0.12.0-SNAPSHOT</version>
+			<version>0.12.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
