--- a/galasa-parent/dev.galasa/build.gradle
+++ b/galasa-parent/dev.galasa/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = "dev.galasa"
-version = "0.12.0-SNAPSHOT"
+version = "0.12.0"
 
 dependencies {
 	api 'javax.validation:validation-api:2.0.1.Final'	
