--- a/galasa-parent/dev.galasa/pom.xml
+++ b/galasa-parent/dev.galasa/pom.xml
@@ -11,6 +11,15 @@
 	<artifactId>dev.galasa</artifactId>
 	<version>0.13.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
+	
+	<dependencies>
+	  <dependency>
+	     <groupId>dev.galasa</groupId>
+	     <artifactId>dev.galasa.framework</artifactId>
+	     <version>0.13.0-SNAPSHOT</version>
+	     <scope>provided</scope>
+	  </dependency>
+	</dependencies>
 
 	<name>Galasa Testers Programmer Interface (TPI)</name>
 
