Simplified galasa-parent Gradle build. * Added gradle properties file. * Implemented source and target versions. * Added projects to settings.gradle
Signed-off-by: Matthew Chivers <matthewchivers@outlook.com>

--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -15,3 +15,7 @@ include 'dev.galasa.framework.api.launcher'
 include 'dev.galasa.framework.api.ras'
 include 'dev.galasa.framework.api.runs'
 include 'dev.galasa.framework.api.testcatalog'
+include 'dev.galasa.framework.docker.controller'
+include 'dev.galasa.framework.k8s.controller'
+include 'galasa-boot'
+include 'galasa-testharness'
