Simplified dev.galasa.framework.maven.repository.spi simpler Gradle build. * Simplified current gradle build file to acknowledge 'sub-project' changes made in galasa-parent.
Signed-off-by: Matthew Chivers <matthewchivers@outlook.com>

--- a/galasa-parent/dev.galasa.framework.maven.repository.spi/build.gradle
+++ b/galasa-parent/dev.galasa.framework.maven.repository.spi/build.gradle
@@ -1,13 +1,5 @@
 plugins {
-    id 'java-library' 
     id 'biz.aQute.bnd.builder' version '5.1.2'
-    id 'maven-publish'
-    id 'signing'
 }
 
-group = "dev.galasa"
-version = "0.14.0-SNAPSHOT"
-
-dependencies {
-}
-
+description = 'Galasa Maven Repository SPI'
