--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -94,7 +94,7 @@
 		<module>dev.galasa.framework.api.bootstrap</module>
 		<module>dev.galasa.framework.api.launcher</module>
 		<module>dev.galasa.framework.api.testcatalog</module>
-		<!-- <module>galasautils-maven-plugin</module> -->
+		<module>galasautils-maven-plugin</module>
 		<module>galasastaging-maven-plugin</module>
 		<module>dev.galasa.framework.api.runs</module>
 		<module>dev.galasa.framework.api.cps</module>
