--- a/galasa-parent/galasastaging-maven-plugin/pom.xml
+++ b/galasa-parent/galasastaging-maven-plugin/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.14.0-SNAPSHOT</version>
+		<version>0.14.0</version>
 	</parent>
 
 	<groupId>dev.galasa</groupId>
 	<artifactId>galasastaging-maven-plugin</artifactId>
-	<version>0.14.0-SNAPSHOT</version>
+	<version>0.14.0</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>galasastaging-maven-plugin Maven Plugin</name>
