--- a/galasa-parent/dev.galasa.framework.api.ras/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api.ras/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.14.0</version>
+		<version>0.15.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework.api.ras</artifactId>
-	<version>0.14.0</version>
+	<version>0.15.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 
@@ -17,13 +17,13 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa</artifactId>
-			<version>0.14.0</version>
+			<version>0.15.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework</artifactId>
-			<version>0.14.0</version>
+			<version>0.15.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
