--- a/galasa-parent/dev.galasa.framework.docker.controller/pom.xml
+++ b/galasa-parent/dev.galasa.framework.docker.controller/pom.xml
@@ -6,18 +6,18 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.14.0</version>
+		<version>0.15.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework.docker.controller</artifactId>
-	<version>0.14.0</version>
+	<version>0.15.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<dependencies>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework</artifactId>
-			<version>0.14.0</version>
+			<version>0.15.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
