--- a/Jenkinsfile.gradle
+++ b/Jenkinsfile.gradle
@@ -21,6 +21,20 @@ pipeline {
          }
       }
 
+      stage('maven') {
+         // Unavoidable until all other projects are no longer dependent on using galasa-parent pom.xml as a parent.
+         steps {
+            withCredentials([string(credentialsId: 'galasa-gpg', variable: 'GPG')]) {
+               withFolderProperties { withSonarQubeEnv('GalasaSonarQube') {
+                  dir('galasa-parent') {
+                     sh "mvn --settings ${workspace}/settings.xml -Dmaven.repo.local=${workspace}/repository -Dgpg.skip=${GPG_SKIP} -Dgpg.passphrase=$GPG -P ${MAVEN_PROFILE} -B -e -fae --non-recursive ${MAVEN_GOAL}"
+                  }
+               }
+               }
+            }
+         }
+      }
+
       stage('gradle') {
          steps {
             withCredentials([
