Added githash plugin
Signed-off-by: Matthew Chivers <matthewchivers@outlook.com>

--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -1,3 +1,12 @@
+pluginManagement {
+    repositories {
+        maven {
+            url "https://nexus.galasa.dev/repository/maven-gradle"
+        }
+        gradlePluginPortal()
+    }
+}
+
 rootProject.name = "galasa-parent"
 
 include 'dev.galasa'
