--- a/galasa-parent/dev.galasa.framework.obr/build.gradle
+++ b/galasa-parent/dev.galasa.framework.obr/build.gradle
@@ -5,5 +5,5 @@ plugins {
 description = 'Galasa Framework OBR'
 
 dependencies {
-    bundle project {':dev.galasa'}
+    bundle project (':dev.galasa')
 }
