Corrected OBR build mechanism
Signed-off-by: Matthew Chivers <matthewchivers@outlook.com>

--- a/Jenkinsfile.gradle
+++ b/Jenkinsfile.gradle
@@ -48,9 +48,27 @@ pipeline {
                   dir('galasa-parent') {
                      sh "gradle -s -Dgradle.user.home=${workspace}/.gradle -Psigning.gnupg.keyName=8534E695 -Psigning.gnupg.passphrase=$GPG ${GRADLE_CACHE} ${GRADLE_TASKS}"
                   }
+                  
                }
             }
          }
       }
+      
+      stage('obr') {
+         steps {
+            withCredentials([
+               string(credentialsId: 'galasa-gpg', variable: 'GPG'),
+               usernamePassword(credentialsId: 'galasa-nexus', usernameVariable: 'MAVENUSERNAME', passwordVariable: 'MAVENPASSWORD'),
+               usernamePassword(credentialsId: 'gradle-cache', usernameVariable: 'CACHEUSERNAME', passwordVariable: 'CACHEPASSWORD')
+            ]) {
+               withFolderProperties { 
+                  dir('galasa-parent/dev.galasa.framework.obr') {
+                        sh "gradle -s -Dgradle.user.home=${workspace}/.gradle -Psigning.gnupg.keyName=8534E695 -Psigning.gnupg.passphrase=$GPG ${GRADLE_CACHE} ${GRADLE_TASKS}"
+                  }
+               }
+            }
+         }
+      }
+
    }
 }
