Changed dependency from multiproject declaration to independent declaration
Signed-off-by: Matthew Chivers <matthewchivers@outlook.com>

--- a/galasa-parent/dev.galasa.framework.obr/build.gradle
+++ b/galasa-parent/dev.galasa.framework.obr/build.gradle
@@ -8,7 +8,7 @@ description = 'Galasa Framework OBR'
 def mavenrepo = System.getenv('MAVEN_REPO') ?: "https://nexus.galasa.dev/repository/maven-development"
 
 dependencies {
-    bundle project (':dev.galasa') { changing = true }
+    bundle ('dev.galasa:dev.galasa:0.15.0-SNAPSHOT') { changing = true }
 }
 
 repositories {
