--- a/galasa-parent/dev.galasa.framework.api.ras/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.ras/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'biz.aQute.bnd.builder' version '5.1.2'
+    id 'org.openapi.generator' version "5.0.1"
 }
 
 description = 'Galasa API - RAS'
@@ -13,4 +14,18 @@ dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
     
     implementation 'io.prometheus:simpleclient:0.6.0'
+}
+
+openApiGenerate {
+    generatorName = "typescript-rxjs"
+    inputSpec = "$projectDir/openapi.yaml".toString()
+    outputDir = "$buildDir/build/openapi/".toString()
+    additionalProperties = [
+        npmName="galasa-ras-api-ts-rxjs",
+        npmRepository=System.getenv('NPM_REPO'),
+        npmVersion=System.getenv('NPM_VERSION'),
+        snapshot=System.getenv('NPM_SNAPSHOT'),
+        supportsES6=false
+    ]
+    
 }
