--- a/Jenkinsfile.gradle
+++ b/Jenkinsfile.gradle
@@ -65,25 +65,27 @@ pipeline {
          }
       }
       stage('npm') {
-         dir('galasa-parent') {
-            sh "gradle -s -Dgradle.user.home=${workspace}/.gradle -Psigning.gnupg.keyName=8534E695 -Psigning.gnupg.passphrase=$GPG ${GRADLE_CACHE} :dev.galasa.framework.api.ras:openApiGenerate"
-            
-            dir('target/openapi') {
-               sh "npm --ignore-scripts install"
-               sh "npm --ignore-scripts update"
-               sh "npm run-script build"
-               script {
-                  sh "cp package.json dist/"
-                  sh "cp README.md dist/" 
-                  dir('dist') {
-                     if (env.PULL_REQ == 'true') {
-                        echo 'Skipping npm publish'
-                        sh "npm --ignore-scripts publish --dry-run"
-                     } else {
-                        sh "npm --ignore-scripts publish"
+         steps {
+            dir('galasa-parent') {
+               sh "gradle -s -Dgradle.user.home=${workspace}/.gradle -Psigning.gnupg.keyName=8534E695 -Psigning.gnupg.passphrase=$GPG ${GRADLE_CACHE} :dev.galasa.framework.api.ras:openApiGenerate"
+               
+               dir('target/openapi') {
+                  sh "npm --ignore-scripts install"
+                  sh "npm --ignore-scripts update"
+                  sh "npm run-script build"
+                  script {
+                     sh "cp package.json dist/"
+                     sh "cp README.md dist/" 
+                     dir('dist') {
+                        if (env.PULL_REQ == 'true') {
+                           echo 'Skipping npm publish'
+                           sh "npm --ignore-scripts publish --dry-run"
+                        } else {
+                           sh "npm --ignore-scripts publish"
+                        }
                      }
-                  }
-               }                      
+                  }                      
+               }
             }
          }
       }
