Added folder properties
Signed-off-by: Matthew Chivers <matthewchivers@outlook.com>

--- a/Jenkinsfile.gradle
+++ b/Jenkinsfile.gradle
@@ -66,25 +66,27 @@ pipeline {
       }
       stage('npm') {
          steps {
-            dir('galasa-parent') {
-               sh "gradle -s -Dgradle.user.home=${workspace}/.gradle ${GRADLE_CACHE} :dev.galasa.framework.api.ras:openApiGenerate"
-               
-               dir('dev.galasa.framework.api.ras/target/openapi') {
-                  sh "npm --ignore-scripts install"
-                  sh "npm --ignore-scripts update"
-                  sh "npm run-script build"
-                  script {
-                     sh "cp package.json dist/"
-                     sh "cp README.md dist/" 
-                     dir('dist') {
-                        if (env.PULL_REQ == 'true') {
-                           echo 'Skipping npm publish'
-                           sh "npm --ignore-scripts publish --dry-run"
-                        } else {
-                           sh "npm --ignore-scripts publish"
+            withFolderProperties {
+               dir('galasa-parent') {
+                  sh "gradle -s -Dgradle.user.home=${workspace}/.gradle ${GRADLE_CACHE} :dev.galasa.framework.api.ras:openApiGenerate"
+                  
+                  dir('dev.galasa.framework.api.ras/target/openapi') {
+                     sh "npm --ignore-scripts install"
+                     sh "npm --ignore-scripts update"
+                     sh "npm run-script build"
+                     script {
+                        sh "cp package.json dist/"
+                        sh "cp README.md dist/" 
+                        dir('dist') {
+                           if (env.PULL_REQ == 'true') {
+                              echo 'Skipping npm publish'
+                              sh "npm --ignore-scripts publish --dry-run"
+                           } else {
+                              sh "npm --ignore-scripts publish"
+                           }
                         }
-                     }
-                  }                      
+                     }                      
+                  }
                }
             }
          }
