Corrected build output directory
Signed-off-by: Matthew Chivers <matthewchivers@outlook.com>

--- a/galasa-parent/dev.galasa.framework.api.ras/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.ras/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 openApiGenerate {
     generatorName = "typescript-rxjs"
     inputSpec = "$projectDir/openapi.yaml".toString()
-    outputDir = "$buildDir/build/openapi/".toString()
+    outputDir = "$buildDir/openapi/".toString()
     additionalProperties = [
         npmName: "galasa-ras-api-ts-rxjs",
         npmRepository: System.getenv('NPM_REPO'),
