--- a/Jenkinsfile.gradle
+++ b/Jenkinsfile.gradle
@@ -68,9 +68,31 @@ pipeline {
          steps {
             withFolderProperties {
                dir('galasa-parent') {
+                  // dev.galasa.framework.api.ras
                   sh "gradle -s -Dgradle.user.home=${workspace}/.gradle ${GRADLE_CACHE} :dev.galasa.framework.api.ras:openApiGenerate"
                   
                   dir('dev.galasa.framework.api.ras/build/openapi') {
+                     sh "npm --ignore-scripts install"
+                     sh "npm --ignore-scripts update"
+                     sh "npm run-script build"
+                     script {
+                        sh "cp package.json dist/"
+                        sh "cp README.md dist/" 
+                        dir('dist') {
+                           if (env.PULL_REQ == 'true') {
+                              echo 'Skipping npm publish'
+                              sh "npm --ignore-scripts publish --dry-run"
+                           } else {
+                              sh "npm --ignore-scripts publish"
+                           }
+                        }
+                     }                      
+                  }
+
+                  // dev.galasa.framework.api.cps
+                  sh "gradle -s -Dgradle.user.home=${workspace}/.gradle ${GRADLE_CACHE} :dev.galasa.framework.api.cps:openApiGenerate"
+                  
+                  dir('dev.galasa.framework.api.cps/build/openapi') {
                      sh "npm --ignore-scripts install"
                      sh "npm --ignore-scripts update"
                      sh "npm run-script build"
