--- a/galasa-parent/dev.galasa/build.gradle
+++ b/galasa-parent/dev.galasa/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'biz.aQute.bnd.builder' version '5.1.2'
+    id 'dev.galasa.githash' version '0.1.0-SNAPSHOT'
 }
 
 description = 'Galasa Testers Programmer Interface (TPI)'
