Changed dev.galasa.framework.maven.repository.spi to not be exported
Signed-off-by: Matthew Chivers <matthewchivers@outlook.com>

--- a/galasa-parent/dev.galasa.framework/build.gradle
+++ b/galasa-parent/dev.galasa.framework/build.gradle
@@ -7,7 +7,7 @@ description = 'Galasa Framework'
 dependencies {
 
     api project (':dev.galasa')
-    api project (':dev.galasa.framework.maven.repository.spi')
+    implementation project (':dev.galasa.framework.maven.repository.spi')
 
     implementation 'log4j:log4j:1.2.17'
     implementation 'org.apache.commons:commons-lang3:3.1'
