--- a/galasa-parent/dev.galasa.framework.api.webui/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.webui/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'biz.aQute.bnd.builder' version '5.3.0'
+    id 'org.openapi.generator' version "5.0.1"
 }
 
 description = 'Galasa Web UI API'
@@ -8,4 +9,17 @@ dependencies {
 
     implementation project(':dev.galasa.framework')
 
+}
+
+openApiGenerate {
+    generatorName = "typescript-rxjs"
+    inputSpec = "$projectDir/openapi.yaml".toString()
+    outputDir = "$buildDir/openapi/".toString()
+    additionalProperties = [
+        npmName: "galasa-webui-api-ts-rxjs",
+        npmRepository: System.getenv('NPM_REPO'),
+        npmVersion: System.getenv('NPM_VERSION'),
+        snapshot: System.getenv('NPM_SNAPSHOT'),
+        supportsES6: "false"
+    ]
 }
