--- a/galasa-parent/dev.galasa.framework.api.webui/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.webui/build.gradle
@@ -9,6 +9,8 @@ dependencies {
 
     implementation project(':dev.galasa.framework')
 
+    implementation 'javax.servlet:javax.servlet-api:3.1.0'
+
 }
 
 openApiGenerate {
