Worklist GET request
Signed-off-by: Jade Carino <jade.carino@ibm.com>

--- a/galasa-parent/dev.galasa.framework.api.webui/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.webui/build.gradle
@@ -10,6 +10,8 @@ dependencies {
     implementation project(':dev.galasa.framework')
 
     implementation 'javax.servlet:javax.servlet-api:3.1.0'
+    
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
 
