--- a/galasa-parent/dev.galasa.framework.api.webui/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api.webui/pom.xml
@@ -23,5 +23,16 @@
 			<version>0.15.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
         </dependencies>
 </project>
