--- a/galasa-parent/dev.galasa.framework.obr/pom.xml
+++ b/galasa-parent/dev.galasa.framework.obr/pom.xml
@@ -104,6 +104,12 @@
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
+			<artifactId>dev.galasa.framework.api.webui</artifactId>
+			<version>0.15.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.api.testcatalog</artifactId>
 			<version>0.15.0-SNAPSHOT</version>
 			<scope>compile</scope>
