gpg key for obr
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/Jenkinsfile.gradle
+++ b/Jenkinsfile.gradle
@@ -59,7 +59,8 @@ pipeline {
          steps {
             withCredentials([
                usernamePassword(credentialsId: 'galasa-nexus', usernameVariable: 'MAVENUSERNAME', passwordVariable: 'MAVENPASSWORD'),
-               usernamePassword(credentialsId: 'gradle-cache', usernameVariable: 'CACHEUSERNAME', passwordVariable: 'CACHEPASSWORD')
+               usernamePassword(credentialsId: 'gradle-cache', usernameVariable: 'CACHEUSERNAME', passwordVariable: 'CACHEPASSWORD'),
+               string(credentialsId: 'galasa-gpg', variable: 'GPG')
             ]) {
                withFolderProperties { 
                   dir('galasa-parent') {
