--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -65,7 +65,7 @@ subprojects {
                 from components.java
                 
                 pom {
-                    name = 'Galasa Testers Programmer Interface (TPI)'
+                    description = 'A Galasa project'
                     url = 'https://galasa.dev'
                     licenses {
                         license {
