validation needs name as well,   set temporary
Signed-off-by: Michael Baylis <Michael.Baylis@uk.ibm.com>

--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -65,6 +65,7 @@ subprojects {
                 from components.java
                 
                 pom {
+                    name = 'A Galasa project'
                     description = 'A Galasa project'
                     url = 'https://galasa.dev'
                     licenses {
