--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -28,8 +28,6 @@ subprojects {
     sourceCompatibility = galasaSourceCompatibility
     targetCompatibility = galasaTargetCompatibility
 
-    def mavenrepo = System.getenv('MAVEN_REPO') ?: "https://nexus.galasa.dev/repository/maven-development"
-
     signing {
         sign publishing.publications
     }
@@ -54,9 +52,11 @@ subprojects {
 
     repositories {
         maven {
-            url mavenrepo
+            url $sourceMaven
         }
-        mavenCentral()
+        maven {
+            url $centralMaven
+        }
     }
 
     publishing {
@@ -138,11 +138,14 @@ subprojects {
         }
         repositories {
             maven {
-                credentials {
-                    username System.getenv('MAVENUSERNAME')
-                    password System.getenv('MAVENPASSWORD')
+                url  = "$targetMaven"
+            
+                if ("$targetMaven".startsWith('http')) {
+                    credentials {
+                        username System.getenv('MAVENUSERNAME')
+                        password System.getenv('MAVENPASSWORD')
+                    }
                 }
-                url = mavenrepo
             }
         }
     }
