--- a/galasa-parent/gradle.properties
+++ b/galasa-parent/gradle.properties
@@ -5,3 +5,8 @@ galasaSourceCompatibility=1.8
 galasaTargetCompatibility=1.8
 
 isRelease=false
+
+
+sourceMaven=https://repo.maven.apache.org/maven2/
+centralMaven=https://repo.maven.apache.org/maven2/
+targetMaven=https://repo.maven.apache.org/maven2/
