--- a/galasa-parent/build.gradle
+++ b/galasa-parent/build.gradle
@@ -52,10 +52,10 @@ subprojects {
 
     repositories {
         maven {
-            url $sourceMaven
+            url "$sourceMaven"
         }
         maven {
-            url $centralMaven
+            url "$centralMaven"
         }
     }
 
