--- a/galasa-parent/settings.gradle
+++ b/galasa-parent/settings.gradle
@@ -1,7 +1,7 @@
 pluginManagement {
     repositories {
         maven {
-            url = $sourceMaven
+            url = "$sourceMaven"
         }
         gradlePluginPortal()
     }
