--- a/galasa-parent/dev.galasa.framework.api.testcatalog/build.gradle
+++ b/galasa-parent/dev.galasa.framework.api.testcatalog/build.gradle
@@ -4,6 +4,8 @@ plugins {
 
 description = 'Galasa API Test Catalog'
 
+version = "0.16.0"
+
 dependencies {
     implementation project(':dev.galasa.framework')
     
